Fix white space at bottom of page, update copyright to 2025
- Add min-height: 100vh flex layout to body so footer sticks to bottom
- Update copyright year from 2024 to 2025 on all pages

--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ body {
   color: var(--color-text);
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+body > .footer {
+  margin-top: auto;
 }
 
 img {
